[package]
name = "shnoop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
libbpf-cargo = "0.23.2"


[dependencies]
anyhow = "1.0.86"
libbpf-cargo = "0.23.2"
libbpf-rs = "0.23.2"
libc = "0.2.155"
plain = "0.2.3"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
